<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradiant_background"
    tools:context=".UploadActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat">

    </android.support.v7.widget.Toolbar>


    <TextView
        android:layout_below="@+id/toolbar2"
        android:id="@+id/upload_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cardImage"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/upload_head"
        android:textAllCaps="false"
        android:layout_marginEnd="10dp"
        android:layout_alignEnd="@+id/cardImage"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardImage"
        android:layout_below="@+id/upload_head"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_centerHorizontal="true"
        app:cardElevation="6dp"
        app:cardCornerRadius="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image_file"
             />

    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/editName"
        android:layout_below="@id/cardImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:hint="@string/namehint"
        android:ems="20"
        android:inputType="textPersonName"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"/>


    <Button
        android:id="@+id/choose_btn"
        android:layout_below="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:elevation="6dp"
        android:padding="14dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:fontFamily="sans-serif"
        android:text="@string/choose_image"
        />

    <Button
        android:id="@+id/upload_btn"
        android:layout_below="@+id/choose_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:elevation="6dp"
        android:padding="14dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:fontFamily="sans-serif"
        android:text="@string/upload_image"
        />

</RelativeLayout>
</ScrollView>