<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/clover"
        android:elevation="6dp"
        android:layout_marginEnd="272dp"
        android:src="@drawable/clover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/textSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="8dp"
        android:elevation="6dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morning"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morning"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/textHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:elevation="6dp"
        android:gravity="left"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore"
                android:layout_below="@+id/heading"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/appicon"/>

        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/bgapp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/bgapp"
        android:layout_width="526dp"
        android:layout_height="900dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menus"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHome"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content">
        <GridLayout
            android:id="@+id/menuGrid"
            android:rowCount="3"
            android:columnCount="2"
            android:layout_marginBottom="15dp"
            android:alignmentMode="alignMargins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/home_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/bg"
                android:layout_columnWeight="1.5"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:background="@drawable/line_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/home"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/Home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/camera_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/bg"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/line_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/Camera"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/upload_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/bg"
                android:layout_columnWeight="1.5"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:background="@drawable/line_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/upload"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/Upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/history_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/bg"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:background="@drawable/line_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/history"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/History"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/settings_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/bg"
                android:layout_columnWeight="1.5"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:background="@drawable/line_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/settings"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/Settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/instruction_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/bg"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:background="@drawable/line_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/instructions"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="#6f6f6f"
                        android:textSize="18sp"
                        android:text="@string/instruction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </GridLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>